# cuda-rtsp-server

./: .gitmodules  CMakeLists.txt  README.md  cuda_rtsp.c  cuda_rtsp.h
example/: CMakeLists.txt  egl.c  egl.h  main.c
